<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ffffffff"
    tools:context=".Debug">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_cast"
        android:id="@+id/mcast"
        android:textColor="@color/background_material_dark"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_above="@+id/s_button_widg"
        android:layout_toRightOf="@+id/ucast"
        android:layout_toEndOf="@+id/ucast"
        android:layout_gravity="left|center_vertical" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u_cast"
        android:id="@+id/ucast"
        android:textColor="@color/background_material_dark"
        android:checked="true"
        android:layout_marginLeft="74dp"
        android:layout_marginStart="74dp"
        android:layout_above="@+id/s_button_widg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="right|center_vertical" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_button"
        android:id="@+id/s_button_widg"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r_field_widg"
        android:minHeight="@dimen/abc_action_bar_stacked_tab_max_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|bottom"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_hint"
        android:id="@+id/s_field_widg"
        android:minHeight="@dimen/abc_action_bar_stacked_tab_max_width"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r_title_widg"
        android:layout_above="@+id/r_field_widg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/recieved_title"
        android:textColor="@color/background_material_dark"
        android:inputType="text"/>
</RelativeLayout>
